[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/icons/music_1.png" type="Texture" id=1]
[ext_resource path="res://src/tasks/AudioTask.gd" type="Script" id=2]

[node name="AudioTask" type="GraphNode"]
margin_right = 136.0
margin_bottom = 162.0
rect_min_size = Vector2( 136, 147 )
title = "Audio Task"
show_close = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 120.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_right = 104.0
margin_bottom = 64.0
rect_min_size = Vector2( 104, 64 )
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 104.0
margin_bottom = 132.0
alignment = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer/VBoxContainer"]
margin_right = 104.0
margin_bottom = 16.0
editable = false

[node name="Play" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 104.0
margin_bottom = 40.0
disabled = true
text = "Play"

[node name="Options" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 104.0
margin_bottom = 64.0
text = "Options"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="close_request" from="." to="." method="_on_AudioTask_close_request"]
[connection signal="dragged" from="." to="." method="_on_AudioTask_dragged"]
[connection signal="value_changed" from="VBoxContainer/VBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
